Debugging spacing issue on metaData section of detail component (tablet view)

--- a/filmexplorer/src/styles/components/Detail/backdrop.scss
+++ b/filmexplorer/src/styles/components/Detail/backdrop.scss
@@ -7,11 +7,10 @@
 	// height: 500px;
 	// object-fit: cover;
 	display: flex;
-	justify-content: center;
+	// justify-content: center;
 
 	.backdropImage {
-		// width: 100%;
-
+		// max-width: 100%;
 		object-fit: cover;
 	}
 	// vertical-align: middle;
