--- a/filmexplorer/src/styles/components/Detail/detailContainer.scss
+++ b/filmexplorer/src/styles/components/Detail/detailContainer.scss
@@ -2,17 +2,14 @@
 	display: flex;
 	flex-flow: column;
 	color: $offWhite;
-	// justify-content: space-around;
-	// align-content: space-evenly;
-	// align-content: center;
-	flex-wrap: wrap;
-	// margin: auto;
 	font-family: $lato;
+	width: 100%;
 
 	.posterWithData {
 		// align-items: center;
 		// align-self: left;
 		margin: auto;
+
 		.left,
 		.right {
 			flex: 1;
@@ -30,9 +27,9 @@
 	p {
 		font-family: $lato;
 		font-weight: 500;
-		// text-align: justify;
-		align-self: center;
-		margin: auto;
+		// text-align: center;
+		// align-self: center;
+		// margin: auto;
 		padding: 1rem;
 	}
 
@@ -47,7 +44,7 @@
 			}
 		}
 		.left {
-			width: 14rem;
+			width: 15rem;
 			height: 21rem;
 		}
 		h1 {
@@ -55,7 +52,9 @@
 		}
 		p {
 			font-size: $mb;
-			width: 60%;
+			width: 100%;
+			// align-self: center;
+			// margin: auto;
 		}
 	}
 
@@ -80,8 +79,9 @@
 			font-size: $mid;
 		}
 		p {
+			margin: auto;
 			font-size: $sm;
-			width: 62%;
+			width: 78%;
 		}
 	}
 
