--- a/filmexplorer/src/styles/components/Detail/trailerContainer.scss
+++ b/filmexplorer/src/styles/components/Detail/trailerContainer.scss
@@ -1,10 +1,11 @@
 .trailerContainer {
-	// display: grid;
-	grid-template-columns: 1fr 1fr;
-	// grid-template-rows: 1fr 1fr;
-	grid-column-gap: 1.25rem;
-	grid-row-gap: 1.25rem;
+	display: flex;
+	// grid-template-rows: minmax(70%, 1fr);
+	// grid-template-rows: 1fr;
+	// grid-column-gap: 1.25rem;
+	// grid-row-gap: 1.25rem;
 	padding: 1rem;
+	align-self: center;
 	@include respond-to(mobile) {
 		display: flex;
 		flex-direction: column;
@@ -16,39 +17,38 @@
 	}
 
 	@include respond-to(desktop) {
-		display: grid;
+		display: flex;
+		flex-direction: row;
 	}
 
 	@include respond-to(wide) {
-		display: grid;
+		display: flex;
+		flex-direction: row;
 	}
 }
 .trailerVideo {
-	// width: 100%;
-	// height: 300px;
-	margin-bottom: 1rem;
 	object-fit: cover;
 	border-style: none;
+	padding: 1rem;
 	@include respond-to(mobile) {
-		align-self: center;
-		width: 21rem;
-		height: 14rem;
+		// align-self: center;
+		width: 14rem;
+		height: 8rem;
 	}
 
 	@include respond-to(tablet) {
-		align-self: center;
+		// align-self: center;
 		width: 30rem;
 		height: 16rem;
 	}
 
 	@include respond-to(desktop) {
-		width: 24rem;
+		width: 26rem;
 		height: 18rem;
 	}
 
 	@include respond-to(wide) {
 		width: 30rem;
-
 		height: 20rem;
 	}
 }
